[gd_scene load_steps=2 format=3 uid="uid://d1cjdsnxpim6t"]

[ext_resource type="Script" uid="uid://dfo3bohigotcl" path="res://main_menu.gd" id="1_06t4h"]

[node name="MainMenu" type="CenterContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_06t4h")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2

[node name="StartButton" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
modulate = Color(0.82606, 0.82606006, 0.82606, 1)
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_type_variation = &"ActionButton"
theme_override_font_sizes/font_size = 32
text = "[ENTER]"

[node name="Header" type="RichTextLabel" parent="VBoxContainer"]
visible = false
layout_mode = 2
theme_override_font_sizes/normal_font_size = 16
text = "Mode"
fit_content = true
horizontal_alignment = 1
vertical_alignment = 1

[node name="ModeSelect" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="ModeLeft" type="Button" parent="VBoxContainer/ModeSelect"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = " <  "

[node name="ModeName" type="RichTextLabel" parent="VBoxContainer/ModeSelect"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Endless"
fit_content = true
autowrap_mode = 0
horizontal_alignment = 1
vertical_alignment = 1

[node name="ModeRight" type="Button" parent="VBoxContainer/ModeSelect"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = " > "

[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ModeSelect/ModeLeft" to="." method="_on_mode_left_pressed"]
[connection signal="pressed" from="VBoxContainer/ModeSelect/ModeRight" to="." method="_on_mode_right_pressed"]
